Fulfill Task 117, Bundle dependencies with the packaged jar

--- a/build.xml
+++ b/build.xml
@@ -60,14 +60,18 @@
 		<tstamp>
 			<format property="ts" pattern="MM/dd/yyyy HH:mm:ss z"/>
 		</tstamp>
+	    <copy tofile="${basedir}/build/lib/xom-1.0.jar">
+            <fileset file="${lib.dir}/xom-1.0.jar"/>
+        </copy>
 		<jar jarfile="${build.dir}/${jarname}">
-			<fileset dir="${build.classes.dir}" includes="*net/**"/>
+			<fileset dir="${build.classes.dir}" includes="*net/** *lib/**"/>
 			<manifest>
 				<attribute name="Main-Class" value="${main.class}"/>
 				<!--<attribute name="Class-Path" value="${runtime.classpath}"/>-->
 				<attribute name="Implementation-Title" value="${name}"/>
 				<attribute name="Implementation-Version" value="${version}"/>
 				<attribute name="Implementation-Vendor" value="http://memoranda.sf.net"/>
+				<attribute name="Class-Path" value="lib/xom-1.0.jar"/>
 				<attribute name="Build-Id" value="${DSTAMP}.${build.number} (${ts} ${user.name} [${os.name} ${os.version} ${os.arch}])"/>
 			</manifest>
 		</jar>
